--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         /* تغییر گرادینت بک‌گراند */
         @keyframes bgAnimation {
             0% { background: linear-gradient(45deg, #ff512f, #dd2476); }
-            100% { background: linear-gradient(45deg, #dd2476, #ff512f); }
+            100% { background: linear-gradient(45deg, #1f00ff, #ff512f); }
         }
 
         /* افکت محو شدن برای ورود جعبه */
