--- a/index.html
+++ b/index.html
@@ -11,16 +11,19 @@
             text-align: center;
             background: linear-gradient(45deg, #ff512f, #dd2476);
             color: white;
+	    height: 100vh;
+	    display: flex;
             padding: 20px;
             animation: bgAnimation 5s infinite alternate;
+	    overflow: hidden;
         }
 
         /* جعبه اصلی */
         .container {
             max-width: 600px;
-            margin: auto;
+            margin: 0;
             background: rgba(0, 0, 0, 0.7);
-            padding: 20px;
+            padding: 0;
             border-radius: 10px;
             box-shadow: 0 0 15px rgba(255, 255, 255, 0.3);
             animation: fadeIn 2s ease-in-out;
@@ -71,7 +74,7 @@
         /* تغییر رنگ تیتر دوم */
         @keyframes colorChange {
             0% { color: #ff0000; }
-            100% { color: #1f00ff; }
+            100% { color: #ff512f; }
         }
 
         /* حرکت نرم عکس به بالا و پایین */
