--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link
+            rel="stylesheet"
+            href="./styles.css"
+        />
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0 ">
         <title>CONTACT PAGE</title>
 
     </head>
     <body>
         <p>Social Accounts: <br>
-        <a href="https://instagram.com/sinool">INSTAGRAM</a><br>
-        <a href="https://t.me/siniool">TELEGRAM</a>
+        <a href="https://instagram.com/sinool"><img height="12em" src="./assests/Instagram.webp">INSTAGRAM</a><br>
+        <a href="https://t.me/siniool"><img height="12em" src="./assests/Telegram.png">TELEGRAM</a>
         </p>
+      
     </body>
 <html lang="en">
