--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,10 @@
             rel="stylesheet"
             href="./styles.css"
         />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=League+Gothic&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="./styles.css"/>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0 ">
         <title>CONTACT PAGE</title>
@@ -12,8 +16,8 @@
     </head>
     <body>
         <p>Social Accounts: <br>
-        <a href="https://instagram.com/sinool"><img height="12em" src="./assests/Instagram.webp">INSTAGRAM</a><br>
-        <a href="https://t.me/siniool"><img height="12em" src="./assests/Telegram.png">TELEGRAM</a>
+        <a href="https://instagram.com/sinool"><img height="20em" src="./assests/Instagram.webp">INSTAGRAM</a><br>
+        <a href="https://t.me/siniool"><img height="20em" src="./assests/Telegram.png">TELEGRAM</a>
         </p>
       
     </body>
