--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <a  href="https://sinool.github.io"><img src="./assests/CEO.png" alt="CEO" height="150" draggable="false"></a>
         <div id="title">
         <h1>SINOOL™</h1>
-        <hr width="300" >
+        <hr width="50%">
         <h2>LAND OF BRAIN FOG</h2>
         </div>
 
         <p>
-            <a href="./about.html">ABOUT ME</a><br>
+            <a href="./about.html">EDITING PORTFOLIO</a><br>
             <a href="./contact.html"> CONTACT</a>
         </p>
     </body>
