--- a/about.html
+++ b/about.html
@@ -14,6 +14,19 @@
         <title>SINOOL™ CORP</title>
     </head>
     <body>
+        <video width="320" height="240" controls>
+            <source src="./assests/V1.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+          </video>
 
+          <video width="320" height="240" controls>
+            <source src="./assests/V2.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+          </video>
+
+          <video width="240" height="320" controls>
+            <source src="./assests/V3.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+          </video>
     </body>
     
