--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
 
     </head>
     <body>
+        <a Id=home href="./index.html">HOME</a>
         <p>Social Accounts: <br>
         <a href="https://instagram.com/sinool"><img height="20em" src="./assests/Instagram.webp">INSTAGRAM</a><br>
         <a href="https://t.me/siniool"><img height="20em" src="./assests/Telegram.png">TELEGRAM</a>
