--- a/about.html
+++ b/about.html
@@ -11,20 +11,27 @@
         <link rel="stylesheet" href="./styles.css"/>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>SINOOL™ CORP</title>
+        <title>SIOOL PORTFOLIO</title>
     </head>
     <body>
-        <video width="320" height="240" controls>
+      <a Id=home href="./index.html">HOME</a><br>
+      <h1>DEMO REEL</h1>
+      <video poster="./assests/POSTER.jpg" preload="metadata" width="640" height="480" controls>
+        <source src="./assests/demo.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+      </video>
+      <h1>FULL VIDEO</h1>
+        <video preload="metadata" width="320" height="240" controls>
             <source src="./assests/V1.mp4" type="video/mp4">
           Your browser does not support the video tag.
           </video>
-
-          <video width="320" height="240" controls>
+          <br>
+          <video preload="metadata" width="320" height="240" controls>
             <source src="./assests/V2.mp4" type="video/mp4">
           Your browser does not support the video tag.
           </video>
-
-          <video width="240" height="320" controls>
+          <br>
+          <video preload="metadata" width="240" height="320" controls>
             <source src="./assests/V3.mp4" type="video/mp4">
           Your browser does not support the video tag.
           </video>
