--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./styles.css"/>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>SIOOL PORTFOLIO</title>
+        <title>SINOOL PORTFOLIO</title>
     </head>
     <body>
       <a Id=home href="./index.html">HOME</a><br>
