--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     <body>
       <a Id=home href="./index.html">HOME</a><br>
       <h1>DEMO REEL</h1>
-      <video poster="./assests/POSTER.jpg" preload="metadata" width="320" height="240" controls>
+      <video poster="./assests/POSTER.jpg" preload="metadata"  controls>
         <source src="./demo.mp4" type="video/mp4">
       Your browser does not support the video tag.
       </video>
