--- a/about.html
+++ b/about.html
@@ -11,27 +11,27 @@
         <link rel="stylesheet" href="./styles.css"/>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>SINOOL PORTFOLIO</title>
+        <title>SIOOL PORTFOLIO</title>
     </head>
     <body>
       <a Id=home href="./index.html">HOME</a><br>
       <h1>DEMO REEL</h1>
       <video poster="./assests/POSTER.jpg" preload="metadata"  controls>
-        <source src="./demo.mp4" type="video/mp4">
+        <source src="./assests/demo.mp4" type="video/mp4">
       Your browser does not support the video tag.
       </video>
       <h1>FULL VIDEO</h1>
-        <video preload="metadata" controls>
+        <video preload="metadata"  controls>
             <source src="./assests/V1.mp4" type="video/mp4">
           Your browser does not support the video tag.
           </video>
           <br>
-          <video preload="metadata" controls>
+          <video preload="metadata"  controls>
             <source src="./assests/V2.mp4" type="video/mp4">
           Your browser does not support the video tag.
           </video>
           <br>
-          <video preload="metadata" controls>
+          <video preload="metadata"  controls>
             <source src="./assests/V3.mp4" type="video/mp4">
           Your browser does not support the video tag.
           </video>
