--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
         </div>
 
         <p>
-            <a href="./about.html">EDITING PORTFOLIO</a><br>
-            <a href="./contact.html"> CONTACT</a>
+            <a href="./about.html">🎬EDITING PORTFOLIO</a><br>
+            <a href="https://jobvision.ir/cv/55403905-164732">👨‍🔧ENGINEERING PORTFOLIO</a><br>
+            <a href="./contact.html">📞CONTACT</a>
         </p>
     </body>
 </html>
