--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
       <a Id=home href="./index.html">HOME</a><br>
       <h1>DEMO REEL</h1>
       <video poster="./assests/POSTER.jpg" preload="metadata"  controls>
-        <source src="./assests/demo.mp4" type="video/mp4">
+        <source src="./demo.mp4" type="video/mp4">
       Your browser does not support the video tag.
       </video>
       <h1>FULL VIDEO</h1>
